Fix uneven icons

--- a/client/static/css/main.css
+++ b/client/static/css/main.css
@@ -2370,10 +2370,11 @@ time {
 .logo.logo-light {
 	background-position: 0 -127px
 }
+
 .icon {
 	display: inline-block;
-	width: 30px;
-	height: 60px;
+	width: 24px;
+	height: 24px;
 	cursor: pointer;
 	fill: #8b8b8b;
 	-webkit-transition: all .5s;
